--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,123 @@ h6 {
   font-family: var(--font-primary);
 }
 
+.section {
+  padding: 7rem 0;
+}
+
+.filters a {
+  text-decoration: none;
+  color: var(--color-primary-accent);
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+}
+
+.filters a:hover,
+.filters a:focus,
+.filters a:active {
+  text-decoration: none;
+}
+
+.filters a:hover:before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 0;
+  height: 1px;
+  background-color: var(--color-primary);
+}
+
+.filters a.active {
+  color: var(--color-primary-accent);
+}
+
+.filters a.active:before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 0;
+  height: 1px;
+  background-color: var(--color-primary);
+}
+
+.item {
+  border: none;
+  margin-bottom: 30px;
+}
+
+.item .item-wrap {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.item .item-wrap:after {
+  z-index: 2;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.4);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s all ease-in-out;
+}
+
+.item .item-wrap img {
+  transition: 0.3s transform ease;
+  transform: scale(1);
+}
+
+.item .item-wrap>.work-info {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  z-index: 3;
+  transform: translateY(-50%);
+  color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  margin-top: 20px;
+  transition: 0.3s all ease;
+}
+
+.item .item-wrap>.work-info h3 {
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+.item .item-wrap>.work-info span {
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+
+.item .item-wrap:hover {
+  text-decoration: none;
+}
+
+.item .item-wrap:hover img {
+  transform: scale(1.05);
+}
+
+.item .item-wrap:hover:after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.item .item-wrap:hover .work-info {
+  margin-top: 0px;
+  opacity: 1;
+  visibility: visible;
+}
+
 /*--------------------------------------------------------------
 # Sections & Section Header
 --------------------------------------------------------------*/
@@ -289,10 +406,29 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+.triangle-logo {
+  z-index: 999;
+  pointer-events: auto; 
+  align-items: center;
+  justify-content: center;
+}
+
+.triangle-logo img {
+  max-height: 120px;
+  margin-right: 8px;
+}
+
 .header {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999;
+}
+
+.header img {
+  max-height: 120px;
+  margin-right: 8px;
+  z-index: 999;
 }
 
 .header .logo {
@@ -338,6 +474,7 @@ h6 {
 @media (min-width: 1280px) {
   .navbar {
     padding: 0;
+    z-index: 10;
   }
 
   .navbar ul {
@@ -570,6 +707,11 @@ h6 {
 /*--------------------------------------------------------------
 # About Section
 --------------------------------------------------------------*/
+#about {
+  position: relative;
+  z-index: 10;
+}
+
 .about .content h2 {
   font-weight: 700;
   font-size: 24px;
@@ -1041,6 +1183,11 @@ h6 {
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
+#contact {
+  position: relative;
+  z-index: 10;
+}
+
 .contact .info-item+.info-item {
   margin-top: 40px;
 }
