--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -407,10 +407,13 @@ h6 {
 # Header
 --------------------------------------------------------------*/
 .triangle-logo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 999;
-  pointer-events: auto; 
-  align-items: center;
-  justify-content: center;
+  max-height: 120px;
+  pointer-events: auto;
 }
 
 .triangle-logo img {
@@ -422,7 +425,11 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  z-index: 0;
+  width: 100%;
+  height: 120px;
+  position: relatives;
+  background: #000;
 }
 
 .header img {
